<resources>
    <string name="app_name">Skaip</string>
    <string name="welcome_text">Welcome to Škaip</string>
    <string name="sign_in_button">Sign In</string>
    <string name="register_button">Register</string>
    <string name="welcome_image">Welcome image</string>
    <string name="logo_name">Skaip</string>
    <string name="back_button">Back</string>
    <string name="first_name">Name</string>
    <string name="sign_in_title">Sign into Skaip</string>
    <string name="Home">Home</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="sign_up_button">Sign up</string>
    <string name="pick_image_button">Pick image</string>
    <string name="name">name</string>
    <string name="course">course</string>
    <string name="year">year</string>
    <string name="email">email</string>
    <string name="userIcon">userIcon</string>
    <string name="add_group">add group</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="create_group">Create group</string>
    <string name="enter_group_description">Description</string>
    <string name="add_files">Add files</string>
    <string name="file_text">Add course tests/tasks</string>
    <string name="group_image_description">Group image</string>
    <string name="group_name">Group Name</string>
    <string name="user_settings">settings</string>
    <string name="save">Save</string>
    <string name="profile_image">Profile image</string>
    <string name="name_setter">Name:</string>
    <string name="change">Change</string>
    <string name="course_setter">Course:</string>
    <string name="year_setter">Year:</string>
    <string name="password_setter">Password:</string>
    <string name="email_setter">Email:</string>
    <string name="type_a_message">Type a message</string>
</resources>